# agentic-performance-lab

./: .dockerignore  .gitignore  DESIGN.md  README.md  pyproject.toml  setup-h100.sh  setup-tpu-v5e.sh  tasks
.github/workflows/: ci.yml
docker/: Dockerfile  README.md
perflab/: ci.py  cli.py  config.py  doctor.py  orchestrator.py  roofline_peaks.py  task_spec.py
perflab/analyzers/: bench_stats.py  bottleneck_analyzer.py  bottleneck_cpu.py  bottleneck_gpu.py  bottleneck_system.py  bottleneck_types.py  build_flags.py  build_overrides.py  compiler_diagnostics.py  cutlass_baselines.py  diff_flamegraph.py  gpu_attribution.py  hlo_attribution.py  metrics_rollup.py  microarch.py  profile_diff.py  tma.py  user_actions.py  vectorization.py
perflab/demo_tasks/_sample/: bench.py  tests.py  tuning.yaml
perflab/demo_tasks/attention/jax_tpu/: tuning.yaml
perflab/demo_tasks/dataloader_bottleneck/pytorch/: dataset.py  model.py  task.yaml
perflab/demo_tasks/gpu_inference_demo/pytorch/: task.yaml  tests.py  tuning.yaml
perflab/demo_tasks/inference_pipeline/pytorch/: task.yaml  tests.py  tuning.yaml
perflab/demo_tasks/matmul/cpp/: task.yaml
perflab/demo_tasks/matmul/cpp_parallel/: tests.py  tuning.yaml
perflab/demo_tasks/matmul/cuda_h100/: sgemm.cu  task.yaml  tuning.yaml
perflab/demo_tasks/matmul/cuda_tensorcore/: hgemm.cu
perflab/demo_tasks/matmul/jax/: matmul_op.py  task.yaml
perflab/demo_tasks/matmul/python/: matmul.py  task.yaml  tuning.yaml
perflab/demo_tasks/matmul/pytorch/: bench.py  task.yaml
perflab/demo_tasks/matmul/triton/: tests.py
perflab/demo_tasks/reduction/cpp_cuda/: bench.py
perflab/demo_tasks/transformer_train/jax/: bench.py  task.yaml  tuning.yaml
perflab/demo_tasks/transformer_train/pytorch/: bench.py  model.py  tuning.yaml
perflab/harness/: __init__.py  determinism.py  gpu_sync.py  pointer_poison.py  precision.py  tensor_check.py  thread_guard.py  tolerance.py
perflab/llm/: anthropic_provider.py  base.py  config.py  mcp_sampling_provider.py  ollama_provider.py  openai_provider.py  pricing.py
perflab/memory/: run_store.py
perflab/optimizers/: agent.py  convergence.py  cross_run.py  event_log.py  history.py  patch.py  progress.py  prompt.py  propose_params.py
perflab/optimizers/phases/: autotune.py  baseline.py  evaluate.py  finalize.py  generate.py  prescreen.py
perflab/profilers/: __init__.py  base.py  ebpf_profiler.py  interval_union.py  jax_profiler.py  linux_perf.py  lock_contention.py  memray_profiler.py  metal_trace.py  ncu_profiler.py  nsys_profiler.py  perfetto_export.py  power_profiler.py  python_pyspy.py  pytorch_profiler.py  thread_sched.py
perflab/reporting/: dashboard_html.py  generate.py  plots.py  report_md.py  roofline.py
perflab/reporting/dashboard_html/: __init__.py  accelerator_sections.py  data.py  diagnostics.py  page.py  profiler_sections.py  widgets.py
perflab/runners/: benchmark.py  correctness.py  pipeline.py
perflab/server/: agent_tools.py  analysis.py  authoring.py  core.py  environment.py  mcp_server.py  runs.py  task_templates.py
perflab/tools/: isolation.py  seccomp.py  shell.py  symbols.py  sysinfo.py
tasks/_sample/: bench.py  sample.py  task.yaml
tasks/attention/jax_tpu/: attention_op.py  bench.py  task.yaml  tests.py
tasks/dataloader_bottleneck/pytorch/: bench.py  tests.py  tuning.yaml
tasks/gpu_inference_demo/pytorch/: bench.py  pipeline.py  tests.py
tasks/inference_pipeline/pytorch/: bench.py  pipeline.py
tasks/matmul/cpp/: bench.py  matmul.cpp  tests.py  tuning.yaml
tasks/matmul/cpp_parallel/: bench.py  matmul.cpp  task.yaml  tests.py
tasks/matmul/cuda/: bench.py  sgemm.cu  task.yaml  tests.py  tuning.yaml
tasks/matmul/cuda_h100/: task.yaml  tuning.yaml
tasks/matmul/cuda_tensorcore/: bench.py  hgemm.cu  task.yaml  tests.py  tuning.yaml
tasks/matmul/jax/: bench.py  tests.py
tasks/matmul/python/: bench.py  tests.py
tasks/matmul/pytorch/: bench.py  matmul_op.py  tests.py  tuning.yaml
tasks/matmul/triton/: bench.py  matmul_kernel.py  task.yaml  tuning.yaml
tasks/reduction/cpp_cuda/: bench.py  reduce.cu  task.yaml  tests.py  tuning.yaml
tasks/stream/python/: bench.py  stream.py  task.yaml  tests.py
tasks/transformer_train/jax/: bench.py  model.py  tests.py
tasks/transformer_train/pytorch/: bench.py  model.py  task.yaml  tests.py
tests/: conftest.py  test_agent_e2e.py  test_agent_state.py  test_anti_gaming.py  test_autotune_restore.py  test_bench_stats.py  test_bottleneck_analyzer.py  test_bottleneck_new.py  test_build_flag_logging.py  test_build_flags.py  test_build_overrides.py  test_candidate_workspace.py  test_checkpoint_resume.py  test_ci.py  test_cli_smoke.py  test_compiler_diagnostics.py  test_config.py  test_context_overflow_detection.py  test_convergence.py  test_cpu_roofline.py  test_crash_finalize.py  test_cross_run.py  test_cutlass_baselines.py  test_dashboard_html.py  test_data_hints.py  test_demo_tasks_cli.py  test_determinism_strictness.py  test_diff_flamegraph.py  test_drift_remeasure.py  test_ebpf_profiler.py  test_env_allowlist.py  test_error_feedback.py  test_event_log_new.py  test_final_gaps.py  test_generate_reports.py  test_gpu_attribution.py  test_gpu_cache_hierarchy.py  test_hardware_mismatch.py  test_hierarchical_roofline.py  test_history_entry.py  (+59 more)
