[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "perflab"
version = "0.1.0"
description = "Agentic profiling + optimization lab"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "PyYAML>=6.0",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
ollama = []
mcp = ["fastmcp>=2.0"]
profiling = ["pmu-tools"]
all = ["openai>=1.0", "anthropic>=0.30", "fastmcp>=2.0"]
tasks-python = ["numpy"]
tasks-pytorch = ["numpy", "torch", "torchvision"]
tasks-jax = ["numpy", "jax", "jaxlib", "optax"]
tasks-jax-metal = ["numpy", "jax", "jaxlib", "jax-metal", "optax"]
tasks-triton = ["numpy", "torch", "triton"]
tasks-all = ["numpy", "torch", "torchvision", "jax", "jaxlib", "optax", "triton"]

[project.scripts]
perflab = "perflab.cli:app"
perflab-mcp = "perflab.server.mcp_server:main"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pyparsing.PyparsingDeprecationWarning",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["perflab*"]

# demo_tasks/ ships the bundled example tasks (tasks/ at the repo root is a
# symlink to perflab/demo_tasks/). It has no __init__.py -- it's not a Python
# package, just data -- so packages.find above never picks it up. Instead we
# attach it as package-data on the "perflab" package, globbing by extension so
# only source files ship: no __pycache__/, out/ run artifacts, or compiled
# matmul_bin binaries from local runs sneak into the wheel.
[tool.setuptools.package-data]
perflab = [
  "demo_tasks/**/*.yaml",
  "demo_tasks/**/*.py",
  "demo_tasks/**/*.cpp",
  "demo_tasks/**/*.cu",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "BLE"]   # BLE flags blind excepts -- see Fix 4
ignore = ["E501"]                              # long lines exist in prompts/tables

[tool.mypy]
# No python_version pin: mypy targets the running interpreter, so each CI matrix
# job checks its own version. A pin below 3.12 chokes on numpy>=2.3 stubs (PEP 695).
ignore_missing_imports = true                  # torch/jax/triton are optional extras
check_untyped_defs = true
# demo_tasks/ (formerly repo-root tasks/) holds standalone example scripts, not
# library code -- CI's `mypy perflab` only swept them in because they now live
# on disk under perflab/ for packaging (see [tool.setuptools.package-data]).
# They were never mypy-checked before the move and aren't held to the same bar.
exclude = ["^perflab/demo_tasks/"]
